--- a/templates/style1.css
+++ b/templates/style1.css
@@ -10,7 +10,7 @@
 .texto_centro{
     font-size: 3.25rem;
     font-weight: 700;
-    line-height: 1.5rem;
+    /* line-height: 1.5rem; */
     color:#6E0D25;
 }
 .text-muted{
@@ -60,7 +60,18 @@
 .sA4{
     padding-bottom:0;
 }
-.sA5, .sA6, .sA8, sA9, .sA10{
+
+.sA5, .sA6{
+    display: grid;
+    place-items: center;
+    text-align: -webkit-center;
+}
+.iA5, .iA6{
+    width:20rem;
+
+}
+
+.sA8, sA9, .sA10{
     display: grid;
 }
 
@@ -70,8 +81,8 @@
     place-items: center;
 }
 
-.iA5, .iA6, .iA81{
-    width: 100% ;
+ .iA81{
+    width: 20rem ;
     /* height:80%; */
 }
 
@@ -86,7 +97,7 @@
 
 .iA8{
     height: 15rem;
-    width: 50%;
+    width: 10rem;
     margin-right: -1%;
 }
 
@@ -107,6 +118,12 @@
     width: 10rem;
     height: 10rem;
 }
+@media (min-width: 760px){
+    .sA8{
+        display: flex;
+        align-items: center;
+    }
+}
 
 @media (min-width: 792px){
     .text-muted{
@@ -126,16 +143,20 @@
     .dA4{
         margin-bottom: -12%;
     }
-    .sA5, .sA6, .sA8, .sA9, .sA10{
+    .iA5, .iA6, .iA9{
+        width:30rem;
+        height: 70%; 
+    }
+    .sA9, .sA10{
         display: flex;
     }
     .iA8{
         height: 15rem;
-        width: 50%;
         margin-right: -1%;
+        width:15rem;
     }
     .iA81{
-        width: auto;
+        width: 30rem;
     }
     
     .tA9{
@@ -150,4 +171,149 @@
         width: 500%;
     }
     
+
+}
+@media (min-width: 900px){
+    .sA5, .sA6{
+        display:flex;
+        
+    }
+}
+
+@media (min-width: 1200px){
+    .iA5, .iA6, .iA9, .iA81{
+        width:40rem;
+        
+    }
+    .iA8{
+        width:20rem;
+    }
+}
+
+.brand{
+    color:#6E0D25; 
+}
+
+.sH1{
+    text-align: -webkit-left;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.sH2{
+    text-align: -webkit-center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.sH3{
+    text-align: -webkit-right;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.sN1, .sN2, .sN3, .sN4, .sN5, .sN6, .sN7, .sN8, .sN11, .sN12, .sN10, .sN9 , .sN13, .sN14, .sN15{
+    text-align: -webkit-center;
+    align-items: center;
+    height: 48vh;
+    padding-top: 8.5rem;
+    padding-bottom: 8.5rem;
+    display: grid;
+    place-items: center;
+}
+.iN4, .iN5, .iN11, .iN12 , .iN13{
+    height: 10rem;
+}
+.sN6{
+    align-items: end;
+    padding-top: 12.5rem;
+    padding-bottom: 3rem;
+}
+.sN7{
+    align-items: baseline;
+    padding-top: 3rem;
+    padding-bottom: 12.5rem;
+}
+.sN8{
+    align-items: end;
+    padding-top: 15.5rem;
+    padding-bottom: 0rem;
+    place-items: end;
+    padding-right: 0;
+}
+.tN8, .tN10{
+    background-color: aliceblue;
+    text-align: -webkit-center;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+.hN8{
+    font-size: 1.25rem;
+}
+
+.iN9{
+    border-radius: 50%;
+}
+.sN9{
+    background: linear-gradient(to bottom,  antiquewhite 50%, #aacac5 50%);
+    padding-left: 0;
+    padding-right: 0%;
+    align-content: center;
+    padding-top: 13rem;
+}
+.sN15{
+    padding-top: 18.5rem;
+    padding-bottom: 0rem;
+}
+
+@media (min-width: 792px){
+    .tN8, .tN10{
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;   
+    }
+    .hN8{
+        font-size: 3.25rem;
+    }
+    .sN13, .sN14, .sN15{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+}
+
+.iconF{
+    width: 2rem;
+    height: 2rem;
+    margin-right: 0.5rem;
+    background-color: aliceblue;
+}
+.iconsF{
+    display:flex;
+}
+.sF1{
+    display:grid;
+}
+.topF{
+    width: 100%;
+    margin-bottom: 1%;
+}
+.botomF{
+    width: 100%;
+    
+}
+.bF1, .bF2{
+    display: grid;
+    justify-content: center;
+}
+.sF1, .sF2, .sF3{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+.tF2{
+    text-align: center;
+}
+.sF3{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
